Bug fix: chosen no more getting hidden behind modal footer.

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -890,6 +890,7 @@ form {
   }
   .modal-body {
     height: auto;
+    overflow: visible;
   }
   .modal-footer {
     line-height: 30px;
